--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
         android:text="开始打印日志"/>
 
     <Button
+        android:id="@+id/ex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="产生一个异常"
@@ -70,5 +71,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:onClick="appendEx"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="产生一个OOM"
+        app:layout_constraintTop_toBottomOf="@+id/ex"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:onClick="aCreatOOM"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
